--- a/style/index.css
+++ b/style/index.css
@@ -78,6 +78,7 @@ nav ul  {
     padding: 80px 40px;
     gap: 220px;
 
+
 }
 .box {
     max-width: 520px;
@@ -109,7 +110,7 @@ nav ul  {
   padding: 40px ;
   text-align: center;
   border-radius: 24px;
-  margin: 40px auto;
+  margin: 0px auto;
   max-width: 1140px;
 }
 
@@ -145,3 +146,81 @@ nav ul  {
 
 
 
+.box-3 {
+  text-align: center;
+  margin: 0px auto;
+  max-width: 1140px;
+  margin-top: 140px;
+  gap: 30px;
+}
+
+.box-3 h2 {
+  font-size: 42px;
+  font-weight: bold;
+  margin-bottom: 50px;
+  color: #252432;
+}
+
+.box-container {
+  display: flex;
+  justify-content: center;
+  flex-wrap: wrap;
+  gap: 20px;
+}
+
+.box3 {
+  background: white;
+  padding: 24px;
+  border-radius: 12px;
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.144);
+  width: 280px;
+  text-align: left;
+  border-radius: 14px;
+
+}
+
+.stars {
+  display: flex;
+  gap: 4px;
+  margin-bottom: 10px;
+}
+
+.stars img {
+  width: 18px;
+  height: 18px;
+}
+
+.box3 h3 {
+  font-size: 18px;
+  margin-bottom: 10px;
+  color: #1E1E1E;
+}
+
+.box3 p {
+  font-size: 14px;
+  color: #1E1E1E;
+}
+
+.reviewer {
+  display: flex;
+  align-items: center;
+  margin-top: 15px;
+}
+
+.reviewer-img {
+  border-radius: 50%;
+  margin-right: 10px;
+  width: 40px;
+  height: 40px;
+}
+
+.reviewer .name {
+  font-weight: bold;
+  font-size: 14px;
+  color: #757575;
+}
+
+.reviewer .date {
+  font-size: 12px;
+  color: #b3b3b3;
+}
